feat: implement genre creation functionality with form and route

--- a/views/genres/new.ejs
+++ b/views/genres/new.ejs
@@ -2,5 +2,7 @@
 <form action="/genres/new" method="POST">
 	<label for="name">Genre name:</label>
 	<input type="text" id="name" name="name" required>
+	<label for="description">Description:</label>
+	<input type="text" id="description" name="description" required>
 	<button type="submit">Create</button>
 </form>
