feat: add back to home btns to both genres and actors

--- a/views/actors/index.ejs
+++ b/views/actors/index.ejs
@@ -50,6 +50,7 @@
 	<h1>Actors</h1>
 
 	<a href="/actors/new" class="add-btn">Add New Actor</a>
+	<a href="/" class="add-btn">Back to Home</a>
 
 	<table>
 		<thead>
