--- a/views/genres/index.ejs
+++ b/views/genres/index.ejs
@@ -61,6 +61,7 @@
 	<h1>Genres</h1>
 
 	<a href="/genres/new" class="new-genre">Add New Genre</a>
+	<a href="/" class="new-genre">Back to Home</a>
 
 	<ul>
 		<% if (genres.length===0) { %>
