--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -60,7 +60,7 @@
 
 	<div class="cont">
 		<a href="/genres" class="btn">Browse Genres</a>
-		<a href="/actors" class="btn">View Actors</a>
+		<a href="/actors" class="btn">Browse Actors</a>
 	</div>
 
 </body>
