feat: add views and other functionality for films route

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -59,6 +59,7 @@
 	<p>Explore movies, manage your watched list, and learn about your favorite actors.</p>
 
 	<div class="cont">
+		<a href="/films" class="btn">Browse Films</a>
 		<a href="/genres" class="btn">Browse Genres</a>
 		<a href="/actors" class="btn">Browse Actors</a>
 	</div>
