--- a/views/films/new.ejs
+++ b/views/films/new.ejs
@@ -79,6 +79,9 @@
 			<label for="release_year">Release Year:</label>
 			<input type="number" id="release_year" name="release_year" min="1000" max="2100" required>
 
+			<label for="rating">Rating(Out of 10): </label>
+			<input type="number" id="rating" name="rating" min="0" max="10" required>
+
 			<label for="watched">Watched?</label>
 			<input type="checkbox" name="watched" id="watched">
 
